# docs/swagger.yaml
@@ -351,6 +351,13 @@ definitions:
       ok:
         type: boolean
     type: object
+  handlers.PlayerRandomFlagShipModeResponseDoc:
+    properties:
+      data:
+        $ref: '#/definitions/types.PlayerRandomFlagShipModeResponse'
+      ok:
+        type: boolean
+    type: object
   handlers.PlayerRemasterProgressResponseDoc:
     properties:
       data:
@@ -1982,6 +1989,22 @@ definitions:
         items:
           $ref: '#/definitions/types.PlayerMailEntry'
         type: array
+    type: object
+  types.PlayerRandomFlagShipModeRequest:
+    properties:
+      mode:
+        enum:
+        - 1
+        - 2
+        - 3
+        type: integer
+    required:
+    - mode
+    type: object
+  types.PlayerRandomFlagShipModeResponse:
+    properties:
+      mode:
+        type: integer
     type: object
   types.PlayerRemasterProgressCreateRequest:
     properties:
@@ -5737,6 +5760,65 @@ paths:
           schema:
             $ref: '#/definitions/handlers.APIErrorResponseDoc'
       summary: Refresh player medal shop
+      tags:
+      - Players
+  /api/v1/players/{id}/random-flagship-mode:
+    get:
+      parameters:
+      - description: Player ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.PlayerRandomFlagShipModeResponseDoc'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.APIErrorResponseDoc'
+      summary: Get player random flagship mode
+      tags:
+      - Players
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Player ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Random flagship mode request
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/types.PlayerRandomFlagShipModeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.OKResponseDoc'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.APIErrorResponseDoc'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.APIErrorResponseDoc'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.APIErrorResponseDoc'
+      summary: Update player random flagship mode
       tags:
       - Players
   /api/v1/players/{id}/remaster:
